--- a/src/index.html
+++ b/src/index.html
@@ -3,15 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <!-- PON UN FAVICON!!! -->
-    
+    <link
+      rel="shortcut icon"
+      href="./assets/images/Isotipo blanco 1.png"
+      type="image/x-icon"
+    />
     <link rel="icon" type="image.png" href="./" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- CAMBIA EL TITLE!!! -->
-    <title>Cards</title>
+    <title>Merger Ingenieria y Medioambiente</title>
   </head>
   <body>
-   
-    
     <script type="module" src="./js/index.js"></script>
   </body>
 </html>
