--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,37 @@
     />
     <link rel="icon" type="image.png" href="./" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- CAMBIA EL TITLE!!! -->
+    
     <title>Merger Ingenieria y Medioambiente</title>
   </head>
   <body>
+    <header class="header">
+      <div>
+        <div class="header__container">
+      <img class="header__image" src="./assets/images/logo-header.svg" alt="logo" />
+      <div>
+      <img id="icon-menu" class="header__icon" src="./assets/images/icon-menu.svg" alt="icon menu"/>
+    </div>
+    <nav>
+      <ul id="menu" class="menu">
+        <li class="menu__item">
+          <a href="#">Merger</a>
+        </li>
+        <li class="menu__item">
+          <a href="#">Proyectos</a>
+        </li>
+        <li class="menu__item">
+          <a href="#">Servicios</a>
+        </li>
+        <li class="menu__item">
+          <a href="#">Contacto</a>
+        </li>
+
+      </ul>
+    </nav>
+  </header>
+
+    </header>
     <script type="module" src="./js/index.js"></script>
   </body>
 </html>
